# meshVisual

./: .gitignore  CMakeLists.txt  README.md
assets/shapes/: circle.shape  duck.shape  square.shape  triangle.shape
config/: settings.json
include/meshvisual/: App.hpp
include/meshvisual/core/: Renderer.hpp  Settings.hpp  Window.hpp
include/meshvisual/graph/: Edge.hpp  Graph.hpp  GraphGenerator.hpp  Node.hpp  Shape.hpp
include/meshvisual/simulation/: NetworkAnimator.hpp
src/: App.cpp  main.cpp
src/core/: Renderer.cpp  Settings.cpp  Window.cpp
src/graph/: Edge.cpp  Graph.cpp  GraphGenerator.cpp  Node.cpp  Shape.cpp
src/simulation/: NetworkAnimator.cpp
tools/: shape_editor.cpp
